# tool-rental-management-system

./: .dockerignore  .gitignore  Dockerfile.backend  Dockerfile.frontend  LICENSE  README.MD  dev.db  docker-compose.yml  pyproject.toml  requirements.txt
app/backend/: crud.py  database.py  init_db.py  main.py  models.py  schemas.py
app/backend/api/: router_analytics.py  router_inventory.py  router_rentals.py  router_users.py
app/backend/core/: crud.py  database.py  schemas.py  security.py
app/backend/modules/inventory/: __init__.py  crud.py  models.py  schemas.py
app/backend/modules/rentals/: crud.py  models.py  schemas.py
app/backend/modules/users/: __init__.py  crud.py  models.py  schemas.py
app/frontend/: api_client.py  app.py  main_frontend.py  utils.py
app/frontend/.streamlit/: config.toml
app/frontend/views/: client_view.py  guest_view.py  manager_view.py  technician_view.py  user_view.py  warehouse_view.py
init-db/: backup.sql
